--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 repository = "https://github.com/haimgel/ddc-macos-rs"
 license = "MIT"
 keywords = ["ddc", "mccs", "vcp", "vesa", "macos"]
+categories = ["hardware-support", "os::macos-apis"]
 
 [dependencies]
 scopeguard = "^1.1.0"
