--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,14 +12,17 @@ categories = ["hardware-support", "os::macos-apis"]
 edition = "2021"
 
 [dependencies]
-core-foundation = "^0.9.1"
-core-foundation-sys = "^0.8.1"
-core-graphics = "^0.22.1"
-ddc = "^0.2.0"
-io-kit-sys = "0.1.0"
-mach = "^0.3.2"
-thiserror = "^1"
-edid = "0.3.0"
+core-foundation = "0.9"
+core-foundation-sys = "0.8"
+core-graphics = "0.23"
+ddc = "0.2"
+io-kit-sys = "0.3"
+mach = "0.3"
+thiserror = "1"
+
+[dev-dependencies]
+edid-rs = "0.1"
+nom = "*"
 
 [badges]
 maintenance = { status = "actively-developed" }
