--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ thiserror = "1"
 
 [dev-dependencies]
 edid-rs = "0.1"
-nom = "*"
+nom = "7.1"
 
 [badges]
 maintenance = { status = "actively-developed" }
