--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,10 +12,10 @@ categories = ["hardware-support", "os::macos-apis"]
 edition = "2021"
 
 [dependencies]
-core-foundation = "0.10.0"
-core-foundation-sys = "0.8"
-core-graphics = "0.24"
-ddc = "0.3"
+core-foundation = "0.10"
+core-foundation-sys = "^0.8"
+core-graphics = "^0.24"
+ddc = "0.2"
 io-kit-sys = "0.4"
 mach = "0.3"
 thiserror = "1"
